; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_usbphy.c_reg_wait.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_usbphy.c_reg_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbphy_softc = type { i32 }

@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usbphy_softc*, i32, i32, i32)* @reg_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reg_wait(%struct.usbphy_softc* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.usbphy_softc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.usbphy_softc* %0, %struct.usbphy_softc** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %25, %4
  %12 = load i32, i32* %10, align 4
  %13 = icmp slt i32 %12, 1000
  br i1 %13, label %14, label %28

14:                                               ; preds = %11
  %15 = load %struct.usbphy_softc*, %struct.usbphy_softc** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @RD4(%struct.usbphy_softc* %15, i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = and i32 %17, %18
  %20 = load i32, i32* %9, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %30

23:                                               ; preds = %14
  %24 = call i32 @DELAY(i32 10)
  br label %25

25:                                               ; preds = %23
  %26 = load i32, i32* %10, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %10, align 4
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* @ETIMEDOUT, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %22
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @RD4(%struct.usbphy_softc*, i32) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
